# NativeScalingBenchmarkTemplate

./: .travis.yml  README.md  appveyor.yml
app/: build.gradle
app/src/androidTest/java/com/example/nativescalingbenchmarktemplate/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/nativescalingbenchmarktemplate/: MainActivity.java
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/nativescalingbenchmarktemplate/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
mylibrary/: CMakeLists.txt  build.gradle  myfile.cpp
mylibrary/src/main/: CMakeLists.txt  myfile.cpp
mylibrary/src/main/cpp/: CMakeLists.txt  myfile.cpp
